didParser.py
# Generated from did.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class didParser ( Parser ):

    grammarFileName = "did.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void main()'", "'void'", "'('", "')'", 
                     "'{'", "'}'", "';'", "'='", "'int'", "'byte'", "'string'", 
                     "'bool'", "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", 
                     "'>='", "'>'", "'=='", "'&&'", "'||'", "'if'", "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SPACE", "BooleanLiteral", 
                      "IntegerLiteral", "StringLiteral", "WORD" ]

    RULE_start = 0
    RULE_mainfunc = 1
    RULE_methodDeclarations = 2
    RULE_methodDeclaration = 3
    RULE_methodHeader = 4
    RULE_methodBody = 5
    RULE_statment = 6
    RULE_embeddedStatment = 7
    RULE_methodName = 8
    RULE_localVaraibledDelaration = 9
    RULE_methodCall = 10
    RULE_variableType = 11
    RULE_variableName = 12
    RULE_varaibleValue = 13
    RULE_exprStatment = 14
    RULE_condition_block = 15
    RULE_expr = 16

    ruleNames =  [ "start", "mainfunc", "methodDeclarations", "methodDeclaration", 
                   "methodHeader", "methodBody", "statment", "embeddedStatment", 
                   "methodName", "localVaraibledDelaration", "methodCall", 
                   "variableType", "variableName", "varaibleValue", "exprStatment", 
                   "condition_block", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    SPACE=26
    BooleanLiteral=27
    IntegerLiteral=28
    StringLiteral=29
    WORD=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclarations(self):
            return self.getTypedRuleContext(didParser.MethodDeclarationsContext,0)


        def mainfunc(self):
            return self.getTypedRuleContext(didParser.MainfuncContext,0)


        def EOF(self):
            return self.getToken(didParser.EOF, 0)

        def getRuleIndex(self):
            return didParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = didParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.methodDeclarations()
            self.state = 35
            self.mainfunc()
            self.state = 36
            self.match(didParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodBody(self):
            return self.getTypedRuleContext(didParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return didParser.RULE_mainfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainfunc" ):
                listener.enterMainfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainfunc" ):
                listener.exitMainfunc(self)




    def mainfunc(self):

        localctx = didParser.MainfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(didParser.T__0)
            self.state = 39
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(didParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return didParser.RULE_methodDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclarations" ):
                listener.enterMethodDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclarations" ):
                listener.exitMethodDeclarations(self)




    def methodDeclarations(self):

        localctx = didParser.MethodDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_methodDeclarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self.methodDeclaration()
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7684) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodHeader(self):
            return self.getTypedRuleContext(didParser.MethodHeaderContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(didParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return didParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = didParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.methodHeader()
            self.state = 47
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableType(self):
            return self.getTypedRuleContext(didParser.VariableTypeContext,0)


        def methodName(self):
            return self.getTypedRuleContext(didParser.MethodNameContext,0)


        def getRuleIndex(self):
            return didParser.RULE_methodHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodHeader" ):
                listener.enterMethodHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodHeader" ):
                listener.exitMethodHeader(self)




    def methodHeader(self):

        localctx = didParser.MethodHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodHeader)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(didParser.T__1)
                pass
            elif token in [9, 10, 11, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.variableType()
                self.state = 51
                self.methodName()
                self.state = 52
                self.match(didParser.T__2)
                self.state = 53
                self.match(didParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.StatmentContext)
            else:
                return self.getTypedRuleContext(didParser.StatmentContext,i)


        def getRuleIndex(self):
            return didParser.RULE_methodBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBody" ):
                listener.enterMethodBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBody" ):
                listener.exitMethodBody(self)




    def methodBody(self):

        localctx = didParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(didParser.T__4)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1493179904) != 0):
                self.state = 58
                self.statment()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(didParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def embeddedStatment(self):
            return self.getTypedRuleContext(didParser.EmbeddedStatmentContext,0)


        def getRuleIndex(self):
            return didParser.RULE_statment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatment" ):
                listener.enterStatment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatment" ):
                listener.exitStatment(self)




    def statment(self):

        localctx = didParser.StatmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.embeddedStatment()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 67
                self.match(didParser.T__6)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmbeddedStatmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localVaraibledDelaration(self):
            return self.getTypedRuleContext(didParser.LocalVaraibledDelarationContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(didParser.MethodCallContext,0)


        def exprStatment(self):
            return self.getTypedRuleContext(didParser.ExprStatmentContext,0)


        def getRuleIndex(self):
            return didParser.RULE_embeddedStatment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmbeddedStatment" ):
                listener.enterEmbeddedStatment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmbeddedStatment" ):
                listener.exitEmbeddedStatment(self)




    def embeddedStatment(self):

        localctx = didParser.EmbeddedStatmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_embeddedStatment)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.localVaraibledDelaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.methodCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.exprStatment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(didParser.WORD, 0)

        def getRuleIndex(self):
            return didParser.RULE_methodName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodName" ):
                listener.enterMethodName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodName" ):
                listener.exitMethodName(self)




    def methodName(self):

        localctx = didParser.MethodNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(didParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalVaraibledDelarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableType(self):
            return self.getTypedRuleContext(didParser.VariableTypeContext,0)


        def variableName(self):
            return self.getTypedRuleContext(didParser.VariableNameContext,0)


        def varaibleValue(self):
            return self.getTypedRuleContext(didParser.VaraibleValueContext,0)


        def getRuleIndex(self):
            return didParser.RULE_localVaraibledDelaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalVaraibledDelaration" ):
                listener.enterLocalVaraibledDelaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalVaraibledDelaration" ):
                listener.exitLocalVaraibledDelaration(self)




    def localVaraibledDelaration(self):

        localctx = didParser.LocalVaraibledDelarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_localVaraibledDelaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.variableType()
            self.state = 78
            self.variableName()

            self.state = 79
            self.match(didParser.T__7)
            self.state = 80
            self.varaibleValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodName(self):
            return self.getTypedRuleContext(didParser.MethodNameContext,0)


        def getRuleIndex(self):
            return didParser.RULE_methodCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodCall" ):
                listener.enterMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodCall" ):
                listener.exitMethodCall(self)




    def methodCall(self):

        localctx = didParser.MethodCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.methodName()
            self.state = 83
            self.match(didParser.T__2)
            self.state = 84
            self.match(didParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return didParser.RULE_variableType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableType" ):
                listener.enterVariableType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableType" ):
                listener.exitVariableType(self)




    def variableType(self):

        localctx = didParser.VariableTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variableType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(didParser.WORD, 0)

        def getRuleIndex(self):
            return didParser.RULE_variableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableName" ):
                listener.enterVariableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableName" ):
                listener.exitVariableName(self)




    def variableName(self):

        localctx = didParser.VariableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_variableName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(didParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VaraibleValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BooleanLiteral(self):
            return self.getToken(didParser.BooleanLiteral, 0)

        def IntegerLiteral(self):
            return self.getToken(didParser.IntegerLiteral, 0)

        def StringLiteral(self):
            return self.getToken(didParser.StringLiteral, 0)

        def getRuleIndex(self):
            return didParser.RULE_varaibleValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVaraibleValue" ):
                listener.enterVaraibleValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVaraibleValue" ):
                listener.exitVaraibleValue(self)




    def varaibleValue(self):

        localctx = didParser.VaraibleValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_varaibleValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 939524096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStatmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(didParser.ExprContext,0)


        def getRuleIndex(self):
            return didParser.RULE_exprStatment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStatment" ):
                listener.enterExprStatment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStatment" ):
                listener.exitExprStatment(self)




    def exprStatment(self):

        localctx = didParser.ExprStatmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exprStatment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(didParser.ExprContext,0)


        def getRuleIndex(self):
            return didParser.RULE_condition_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_block" ):
                listener.enterCondition_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_block" ):
                listener.exitCondition_block(self)




    def condition_block(self):

        localctx = didParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(didParser.T__2)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.match(didParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return didParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.ExprContext)
            else:
                return self.getTypedRuleContext(didParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)


    class CompContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.ExprContext)
            else:
                return self.getTypedRuleContext(didParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp" ):
                listener.enterComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp" ):
                listener.exitComp(self)


    class BoolContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BooleanLiteral(self):
            return self.getToken(didParser.BooleanLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)


    class MulContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.ExprContext)
            else:
                return self.getTypedRuleContext(didParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)


    class AssiContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.ExprContext)
            else:
                return self.getTypedRuleContext(didParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssi" ):
                listener.enterAssi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssi" ):
                listener.exitAssi(self)


    class BinContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.ExprContext)
            else:
                return self.getTypedRuleContext(didParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBin" ):
                listener.enterBin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBin" ):
                listener.exitBin(self)


    class IntegerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IntegerLiteral(self):
            return self.getToken(didParser.IntegerLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)


    class IfStatmentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition_block(self):
            return self.getTypedRuleContext(didParser.Condition_blockContext,0)

        def methodBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(didParser.MethodBodyContext)
            else:
                return self.getTypedRuleContext(didParser.MethodBodyContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatment" ):
                listener.enterIfStatment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatment" ):
                listener.exitIfStatment(self)


    class WordContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a didParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WORD(self):
            return self.getToken(didParser.WORD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWord" ):
                listener.enterWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWord" ):
                listener.exitWord(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = didParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 32
        self.enterRecursionRule(localctx, 32, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                localctx = didParser.IfStatmentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 99
                self.match(didParser.T__23)
                self.state = 100
                self.condition_block()
                self.state = 101
                self.methodBody()
                self.state = 104
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.match(didParser.T__24)
                    self.state = 103
                    self.methodBody()


                pass
            elif token in [28]:
                localctx = didParser.IntegerContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 106
                self.match(didParser.IntegerLiteral)
                pass
            elif token in [30]:
                localctx = didParser.WordContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.match(didParser.WORD)
                pass
            elif token in [27]:
                localctx = didParser.BoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 108
                self.match(didParser.BooleanLiteral)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 126
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = didParser.MulContext(self, didParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 111
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 112
                        _la = self._input.LA(1)
                        if not(_la==13 or _la==14):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 113
                        self.expr(10)
                        pass
